--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -11,7 +11,7 @@
 <h2> Players </h2> 
   <ul>
   <% @team.players.each do |player| %> 
-    <li><%= player.name %></li>
+    <li><%= link_to player.name, player_path(player) %></li>
   <% end %>
   </ul>  <br>
 
