--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <a href="/teams", style="color:black">View All Teams</a> 
   <a href="/players">View All Players</a> 
   
-  <%= link_to "View My Teams", user_teams_path(current_user.id) %>  
+  <%= link_to "View My Teams", user_teams_path(current_user) %>  
 
   
   <a href="/logout", style="color:red"> Logout </a> 
