--- a/app/views/player_teams/_form.html.erb
+++ b/app/views/player_teams/_form.html.erb
@@ -4,7 +4,7 @@
 
     <%= form_for(@player_team) do |f| %> 
   
-       <%= select_tag :player_id, options_from_collection_for_select(Player.all,"id","name"), {:prompt => "Select Player"} %><br><br>
+       <%= f.collection_select :player_id, Player.all,:id,:name, {:prompt => "Select Player"} %><br><br>
        <%= f.hidden_field :team_id %> 
         <%= f.label :position %> 
         <%= f.text_area :position %> <br>
